src/main/java/asn/aosamesan/functionbuilder/parser/FunctionGrammarParser.java
// Generated from /Users/aosamesan/IdeaProjects/function-builder/src/main/java/asn/aosamesan/functionbuilder/parser/FunctionGrammar.g4 by ANTLR 4.9.1
package asn.aosamesan.functionbuilder.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FunctionGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, VARIABLE=3, PLUS=4, MINUS=5, ASTER=6, SLASH=7, POWER=8, 
		PERCENT=9, FACTORIAL=10, EULER=11, PI=12, MODULUS=13, SIN=14, COSEC=15, 
		COS=16, SEC=17, TAN=18, COT=19, ARCSIN=20, ARCCSC=21, ARCCOS=22, ARCSEC=23, 
		ARCTAN=24, ARCCOT=25, SINH=26, COSH=27, TANH=28, CSCH=29, SECH=30, COTH=31, 
		ASINH=32, ACOSH=33, ATANH=34, ACSCH=35, ASECH=36, ACOTH=37, LOG10=38, 
		LOG=39, EXP=40, SQRT=41, GAMMA=42, FACT=43, NUMBER=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_addition = 1, RULE_modulus = 2, RULE_multiplication = 3, 
		RULE_power_without_percentage = 4, RULE_power = 5, RULE_signed_atom = 6, 
		RULE_atom_without_percentage = 7, RULE_atom = 8, RULE_variable_with_scalar_product = 9, 
		RULE_variable_with_power = 10, RULE_factorial = 11, RULE_functional = 12, 
		RULE_function_name = 13, RULE_number = 14, RULE_variable = 15, RULE_constant = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "addition", "modulus", "multiplication", "power_without_percentage", 
			"power", "signed_atom", "atom_without_percentage", "atom", "variable_with_scalar_product", 
			"variable_with_power", "factorial", "functional", "function_name", "number", 
			"variable", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'x'", "'+'", "'-'", null, null, "'^'", "'%'", "'!'", 
			"'e'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "VARIABLE", "PLUS", "MINUS", "ASTER", "SLASH", 
			"POWER", "PERCENT", "FACTORIAL", "EULER", "PI", "MODULUS", "SIN", "COSEC", 
			"COS", "SEC", "TAN", "COT", "ARCSIN", "ARCCSC", "ARCCOS", "ARCSEC", "ARCTAN", 
			"ARCCOT", "SINH", "COSH", "TANH", "CSCH", "SECH", "COTH", "ASINH", "ACOSH", 
			"ATANH", "ACSCH", "ASECH", "ACOTH", "LOG10", "LOG", "EXP", "SQRT", "GAMMA", 
			"FACT", "NUMBER", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FunctionGrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			addition(0);
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionContext extends ParserRuleContext {
		public Token op;
		public ModulusContext modulus() {
			return getRuleContext(ModulusContext.class,0);
		}
		public List<AdditionContext> addition() {
			return getRuleContexts(AdditionContext.class);
		}
		public AdditionContext addition(int i) {
			return getRuleContext(AdditionContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(FunctionGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FunctionGrammarParser.MINUS, 0); }
		public AdditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterAddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitAddition(this);
		}
	}

	public final AdditionContext addition() throws RecognitionException {
		return addition(0);
	}

	private AdditionContext addition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AdditionContext _localctx = new AdditionContext(_ctx, _parentState);
		AdditionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_addition, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(38);
			modulus(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AdditionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_addition);
					setState(40);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(41);
					((AdditionContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
						((AdditionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(42);
					addition(2);
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ModulusContext extends ParserRuleContext {
		public Token op;
		public MultiplicationContext multiplication() {
			return getRuleContext(MultiplicationContext.class,0);
		}
		public List<ModulusContext> modulus() {
			return getRuleContexts(ModulusContext.class);
		}
		public ModulusContext modulus(int i) {
			return getRuleContext(ModulusContext.class,i);
		}
		public TerminalNode MODULUS() { return getToken(FunctionGrammarParser.MODULUS, 0); }
		public TerminalNode PERCENT() { return getToken(FunctionGrammarParser.PERCENT, 0); }
		public TerminalNode LPAREN() { return getToken(FunctionGrammarParser.LPAREN, 0); }
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FunctionGrammarParser.RPAREN, 0); }
		public ModulusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modulus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterModulus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitModulus(this);
		}
	}

	public final ModulusContext modulus() throws RecognitionException {
		return modulus(0);
	}

	private ModulusContext modulus(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ModulusContext _localctx = new ModulusContext(_ctx, _parentState);
		ModulusContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_modulus, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(49);
			multiplication(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(60);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ModulusContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_modulus);
						setState(51);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(52);
						((ModulusContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PERCENT || _la==MODULUS) ) {
							((ModulusContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(53);
						modulus(3);
						}
						break;
					case 2:
						{
						_localctx = new ModulusContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_modulus);
						setState(54);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(55);
						((ModulusContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PERCENT || _la==MODULUS) ) {
							((ModulusContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(56);
						match(LPAREN);
						setState(57);
						addition(0);
						setState(58);
						match(RPAREN);
						}
						break;
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultiplicationContext extends ParserRuleContext {
		public Token op;
		public PowerContext power() {
			return getRuleContext(PowerContext.class,0);
		}
		public Signed_atomContext signed_atom() {
			return getRuleContext(Signed_atomContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(FunctionGrammarParser.LPAREN, 0); }
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FunctionGrammarParser.RPAREN, 0); }
		public List<MultiplicationContext> multiplication() {
			return getRuleContexts(MultiplicationContext.class);
		}
		public MultiplicationContext multiplication(int i) {
			return getRuleContext(MultiplicationContext.class,i);
		}
		public TerminalNode ASTER() { return getToken(FunctionGrammarParser.ASTER, 0); }
		public TerminalNode SLASH() { return getToken(FunctionGrammarParser.SLASH, 0); }
		public Power_without_percentageContext power_without_percentage() {
			return getRuleContext(Power_without_percentageContext.class,0);
		}
		public MultiplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplication; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterMultiplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitMultiplication(this);
		}
	}

	public final MultiplicationContext multiplication() throws RecognitionException {
		return multiplication(0);
	}

	private MultiplicationContext multiplication(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MultiplicationContext _localctx = new MultiplicationContext(_ctx, _parentState);
		MultiplicationContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_multiplication, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(66);
				power(0);
				}
				break;
			case 2:
				{
				setState(67);
				signed_atom();
				}
				break;
			case 3:
				{
				setState(68);
				match(LPAREN);
				setState(69);
				addition(0);
				setState(70);
				match(RPAREN);
				setState(71);
				multiplication(2);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(80);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new MultiplicationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_multiplication);
						setState(75);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(76);
						((MultiplicationContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ASTER || _la==SLASH) ) {
							((MultiplicationContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(77);
						multiplication(4);
						}
						break;
					case 2:
						{
						_localctx = new MultiplicationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_multiplication);
						setState(78);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(79);
						power_without_percentage(0);
						}
						break;
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Power_without_percentageContext extends ParserRuleContext {
		public Token op;
		public Atom_without_percentageContext atom_without_percentage() {
			return getRuleContext(Atom_without_percentageContext.class,0);
		}
		public Power_without_percentageContext power_without_percentage() {
			return getRuleContext(Power_without_percentageContext.class,0);
		}
		public TerminalNode POWER() { return getToken(FunctionGrammarParser.POWER, 0); }
		public PowerContext power() {
			return getRuleContext(PowerContext.class,0);
		}
		public Signed_atomContext signed_atom() {
			return getRuleContext(Signed_atomContext.class,0);
		}
		public Power_without_percentageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_power_without_percentage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterPower_without_percentage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitPower_without_percentage(this);
		}
	}

	public final Power_without_percentageContext power_without_percentage() throws RecognitionException {
		return power_without_percentage(0);
	}

	private Power_without_percentageContext power_without_percentage(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Power_without_percentageContext _localctx = new Power_without_percentageContext(_ctx, _parentState);
		Power_without_percentageContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_power_without_percentage, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			atom_without_percentage();
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Power_without_percentageContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_power_without_percentage);
					setState(88);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(89);
					((Power_without_percentageContext)_localctx).op = match(POWER);
					setState(92);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case LPAREN:
					case VARIABLE:
					case SIN:
					case COSEC:
					case COS:
					case SEC:
					case TAN:
					case COT:
					case ARCSIN:
					case ARCCSC:
					case ARCCOS:
					case ARCSEC:
					case ARCTAN:
					case ARCCOT:
					case SINH:
					case COSH:
					case TANH:
					case CSCH:
					case SECH:
					case COTH:
					case ASINH:
					case ACOSH:
					case ATANH:
					case ACSCH:
					case ASECH:
					case ACOTH:
					case LOG10:
					case LOG:
					case EXP:
					case SQRT:
					case GAMMA:
					case FACT:
					case NUMBER:
						{
						setState(90);
						power(0);
						}
						break;
					case PLUS:
					case MINUS:
						{
						setState(91);
						signed_atom();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PowerContext extends ParserRuleContext {
		public Token op;
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public List<PowerContext> power() {
			return getRuleContexts(PowerContext.class);
		}
		public PowerContext power(int i) {
			return getRuleContext(PowerContext.class,i);
		}
		public TerminalNode POWER() { return getToken(FunctionGrammarParser.POWER, 0); }
		public Signed_atomContext signed_atom() {
			return getRuleContext(Signed_atomContext.class,0);
		}
		public PowerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_power; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterPower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitPower(this);
		}
	}

	public final PowerContext power() throws RecognitionException {
		return power(0);
	}

	private PowerContext power(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PowerContext _localctx = new PowerContext(_ctx, _parentState);
		PowerContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_power, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(100);
			atom(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PowerContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_power);
					setState(102);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(103);
					((PowerContext)_localctx).op = match(POWER);
					setState(106);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case LPAREN:
					case VARIABLE:
					case SIN:
					case COSEC:
					case COS:
					case SEC:
					case TAN:
					case COT:
					case ARCSIN:
					case ARCCSC:
					case ARCCOS:
					case ARCSEC:
					case ARCTAN:
					case ARCCOT:
					case SINH:
					case COSH:
					case TANH:
					case CSCH:
					case SECH:
					case COTH:
					case ASINH:
					case ACOSH:
					case ATANH:
					case ACSCH:
					case ASECH:
					case ACOTH:
					case LOG10:
					case LOG:
					case EXP:
					case SQRT:
					case GAMMA:
					case FACT:
					case NUMBER:
						{
						setState(104);
						power(0);
						}
						break;
					case PLUS:
					case MINUS:
						{
						setState(105);
						signed_atom();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Signed_atomContext extends ParserRuleContext {
		public Token sign;
		public PowerContext power() {
			return getRuleContext(PowerContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(FunctionGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FunctionGrammarParser.MINUS, 0); }
		public Signed_atomContext signed_atom() {
			return getRuleContext(Signed_atomContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(FunctionGrammarParser.LPAREN, 0); }
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FunctionGrammarParser.RPAREN, 0); }
		public Signed_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signed_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).enterSigned_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionGrammarListener ) ((FunctionGrammarListener)listener).exitSigned_atom(this);
		}
	}

	public final Signed_atomContext signed_atom() throws RecognitionException {
		Signed_atomContext _localctx = new Signed_atomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_signed_atom);
		int _la;
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				((Signed_atomContext)_localctx).sign = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					((Signed_atomContext)_localctx).sign = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(114);
				power(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				((Signed_atomContext)_localctx).sign = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					((Signed_atomContext)_localctx).sign = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(116);
				signed_atom();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				((Signed_atomContext)_localctx).sign = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					((Signed_atomContext)_localctx).sign = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(118);
				match(LPAREN);
				setState(119);
				addition(0);
				setState(120);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
